# lil-jvm

./: AddMain.java  CMakeLists.txt  README.md  class.c  class.h  common.h  debug.c  debug.h  javap.c  loader.c  loader.h  main.c  memory.c  memory.h  native.c  native.h  vm.c  vm.h
tests/: tests.py
